// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressBar /> should render ProgressBar with default props 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3.c3.c3.c3.c3 {
  margin-bottom: 4px;
}

.c4.c4.c4.c4.c4 {
  overflow: hidden;
  position: relative;
  height: 2px;
  background-color: hsla(211,20%,52%,0.09);
}

.c5.c5.c5.c5.c5 {
  background-color: hsla(227,100%,59%,1);
}

.c6.c6.c6.c6.c6 {
  -webkit-transition-property: width;
  transition-property: width;
  -webkit-transition-duration: 900ms;
  transition-duration: 900ms;
}

.c8.c8.c8.c8.c8 {
  -webkit-transition-property: width;
  transition-property: width;
  -webkit-transition-duration: 900ms;
  transition-duration: 900ms;
  -webkit-transition-timing-function: cubic-bezier(0.5,0,0,1);
  transition-timing-function: cubic-bezier(0.5,0,0,1);
}

.c7.c7.c7.c7.c7 {
  background-color: hsla(227,100%,59%,1);
  height: 100%;
  width: 20%;
}

.c9.c9.c9.c9.c9 {
  height: 100%;
  width: 100%;
  opacity: 0;
  background-color: white;
  -webkit-animation: iUKfkR-450290765 900ms cubic-bezier(0.5,0,0,1) infinite;
  animation: iUKfkR-450290765 900ms cubic-bezier(0.5,0,0,1) infinite;
  -webkit-animation-delay: 3000ms;
  animation-delay: 3000ms;
}

.c2.c2.c2.c2.c2 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter",-apple-system,BlinkMacSystemFont,San Francisco,Segoe UI,Roboto,Helvetica Neue,sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class=""
    data-blade-component="progress-bar"
  >
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <label
          class="c2"
          data-blade-component="text"
        >
          Label
        </label>
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <p
            class="c2"
            data-blade-component="text"
          >
            20%
          </p>
        </div>
      </div>
      <div
        aria-label="Label"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class=""
        data-blade-component="base-box"
        id="progress-1"
        role="progressbar"
      >
        <div
          class="c4"
          data-blade-component="base-box"
        >
          <div
            class="c5 c6 c7"
            data-blade-component="base-box"
          >
            <div
              class=" c8 c9"
              data-blade-component="base-box"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProgressBar /> should render ProgressBar without label and percentage 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c2.c2.c2.c2.c2 {
  overflow: hidden;
  position: relative;
  height: 2px;
  background-color: hsla(211,20%,52%,0.09);
}

.c3.c3.c3.c3.c3 {
  background-color: hsla(227,100%,59%,1);
}

.c4.c4.c4.c4.c4 {
  -webkit-transition-property: width;
  transition-property: width;
  -webkit-transition-duration: 900ms;
  transition-duration: 900ms;
}

.c6.c6.c6.c6.c6 {
  -webkit-transition-property: width;
  transition-property: width;
  -webkit-transition-duration: 900ms;
  transition-duration: 900ms;
  -webkit-transition-timing-function: cubic-bezier(0.5,0,0,1);
  transition-timing-function: cubic-bezier(0.5,0,0,1);
}

.c5.c5.c5.c5.c5 {
  background-color: hsla(227,100%,59%,1);
  height: 100%;
  width: 50%;
}

.c7.c7.c7.c7.c7 {
  height: 100%;
  width: 100%;
  opacity: 0;
  background-color: white;
  -webkit-animation: iUKfkR-450290765 900ms cubic-bezier(0.5,0,0,1) infinite;
  animation: iUKfkR-450290765 900ms cubic-bezier(0.5,0,0,1) infinite;
  -webkit-animation-delay: 3000ms;
  animation-delay: 3000ms;
}

<div>
  <div
    class=""
    data-blade-component="progress-bar"
  >
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      />
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        aria-valuetext="50%"
        class=""
        data-blade-component="base-box"
        id="progress-10"
        role="progressbar"
      >
        <div
          class="c2"
          data-blade-component="base-box"
        >
          <div
            class="c3 c4 c5"
            data-blade-component="base-box"
          >
            <div
              class=" c6 c7"
              data-blade-component="base-box"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProgressBar /> should render color=information ProgressBar 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c2.c2.c2.c2.c2 {
  margin-bottom: 4px;
}

.c4.c4.c4.c4.c4 {
  overflow: hidden;
  position: relative;
  height: 2px;
  background-color: hsla(211,20%,52%,0.09);
}

.c5.c5.c5.c5.c5 {
  background-color: hsla(200,84%,44%,1);
}

.c6.c6.c6.c6.c6 {
  -webkit-transition-property: width;
  transition-property: width;
  -webkit-transition-duration: 900ms;
  transition-duration: 900ms;
}

.c8.c8.c8.c8.c8 {
  -webkit-transition-property: width;
  transition-property: width;
  -webkit-transition-duration: 900ms;
  transition-duration: 900ms;
  -webkit-transition-timing-function: cubic-bezier(0.5,0,0,1);
  transition-timing-function: cubic-bezier(0.5,0,0,1);
}

.c7.c7.c7.c7.c7 {
  background-color: hsla(200,84%,44%,1);
  height: 100%;
  width: 20%;
}

.c9.c9.c9.c9.c9 {
  height: 100%;
  width: 100%;
  opacity: 0;
  background-color: white;
  -webkit-animation: iUKfkR-450290765 900ms cubic-bezier(0.5,0,0,1) infinite;
  animation: iUKfkR-450290765 900ms cubic-bezier(0.5,0,0,1) infinite;
  -webkit-animation-delay: 3000ms;
  animation-delay: 3000ms;
}

.c3.c3.c3.c3.c3 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter",-apple-system,BlinkMacSystemFont,San Francisco,Segoe UI,Roboto,Helvetica Neue,sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class=""
    data-blade-component="progress-bar"
  >
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <div
          class="c2"
          data-blade-component="base-box"
        >
          <p
            class="c3"
            data-blade-component="text"
          >
            20%
          </p>
        </div>
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class=""
        data-blade-component="base-box"
        id="progress-14"
        role="progressbar"
      >
        <div
          class="c4"
          data-blade-component="base-box"
        >
          <div
            class="c5 c6 c7"
            data-blade-component="base-box"
          >
            <div
              class=" c8 c9"
              data-blade-component="base-box"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProgressBar /> should render color=negative ProgressBar 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c2.c2.c2.c2.c2 {
  margin-bottom: 4px;
}

.c4.c4.c4.c4.c4 {
  overflow: hidden;
  position: relative;
  height: 2px;
  background-color: hsla(211,20%,52%,0.09);
}

.c5.c5.c5.c5.c5 {
  background-color: hsla(4,74%,49%,1);
}

.c6.c6.c6.c6.c6 {
  -webkit-transition-property: width;
  transition-property: width;
  -webkit-transition-duration: 900ms;
  transition-duration: 900ms;
}

.c8.c8.c8.c8.c8 {
  -webkit-transition-property: width;
  transition-property: width;
  -webkit-transition-duration: 900ms;
  transition-duration: 900ms;
  -webkit-transition-timing-function: cubic-bezier(0.5,0,0,1);
  transition-timing-function: cubic-bezier(0.5,0,0,1);
}

.c7.c7.c7.c7.c7 {
  background-color: hsla(4,74%,49%,1);
  height: 100%;
  width: 20%;
}

.c9.c9.c9.c9.c9 {
  height: 100%;
  width: 100%;
  opacity: 0;
  background-color: white;
  -webkit-animation: iUKfkR-450290765 900ms cubic-bezier(0.5,0,0,1) infinite;
  animation: iUKfkR-450290765 900ms cubic-bezier(0.5,0,0,1) infinite;
  -webkit-animation-delay: 3000ms;
  animation-delay: 3000ms;
}

.c3.c3.c3.c3.c3 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter",-apple-system,BlinkMacSystemFont,San Francisco,Segoe UI,Roboto,Helvetica Neue,sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class=""
    data-blade-component="progress-bar"
  >
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <div
          class="c2"
          data-blade-component="base-box"
        >
          <p
            class="c3"
            data-blade-component="text"
          >
            20%
          </p>
        </div>
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class=""
        data-blade-component="base-box"
        id="progress-16"
        role="progressbar"
      >
        <div
          class="c4"
          data-blade-component="base-box"
        >
          <div
            class="c5 c6 c7"
            data-blade-component="base-box"
          >
            <div
              class=" c8 c9"
              data-blade-component="base-box"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProgressBar /> should render color=neutral ProgressBar 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c2.c2.c2.c2.c2 {
  margin-bottom: 4px;
}

.c4.c4.c4.c4.c4 {
  overflow: hidden;
  position: relative;
  height: 2px;
  background-color: hsla(211,20%,52%,0.09);
}

.c5.c5.c5.c5.c5 {
  background-color: hsla(211,29%,26%,1);
}

.c6.c6.c6.c6.c6 {
  -webkit-transition-property: width;
  transition-property: width;
  -webkit-transition-duration: 900ms;
  transition-duration: 900ms;
}

.c8.c8.c8.c8.c8 {
  -webkit-transition-property: width;
  transition-property: width;
  -webkit-transition-duration: 900ms;
  transition-duration: 900ms;
  -webkit-transition-timing-function: cubic-bezier(0.5,0,0,1);
  transition-timing-function: cubic-bezier(0.5,0,0,1);
}

.c7.c7.c7.c7.c7 {
  background-color: hsla(211,29%,26%,1);
  height: 100%;
  width: 20%;
}

.c9.c9.c9.c9.c9 {
  height: 100%;
  width: 100%;
  opacity: 0;
  background-color: white;
  -webkit-animation: iUKfkR-450290765 900ms cubic-bezier(0.5,0,0,1) infinite;
  animation: iUKfkR-450290765 900ms cubic-bezier(0.5,0,0,1) infinite;
  -webkit-animation-delay: 3000ms;
  animation-delay: 3000ms;
}

.c3.c3.c3.c3.c3 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter",-apple-system,BlinkMacSystemFont,San Francisco,Segoe UI,Roboto,Helvetica Neue,sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class=""
    data-blade-component="progress-bar"
  >
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <div
          class="c2"
          data-blade-component="base-box"
        >
          <p
            class="c3"
            data-blade-component="text"
          >
            20%
          </p>
        </div>
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class=""
        data-blade-component="base-box"
        id="progress-18"
        role="progressbar"
      >
        <div
          class="c4"
          data-blade-component="base-box"
        >
          <div
            class="c5 c6 c7"
            data-blade-component="base-box"
          >
            <div
              class=" c8 c9"
              data-blade-component="base-box"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProgressBar /> should render color=notice ProgressBar 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c2.c2.c2.c2.c2 {
  margin-bottom: 4px;
}

.c4.c4.c4.c4.c4 {
  overflow: hidden;
  position: relative;
  height: 2px;
  background-color: hsla(211,20%,52%,0.09);
}

.c5.c5.c5.c5.c5 {
  background-color: hsla(25,90%,48%,1);
}

.c6.c6.c6.c6.c6 {
  -webkit-transition-property: width;
  transition-property: width;
  -webkit-transition-duration: 900ms;
  transition-duration: 900ms;
}

.c8.c8.c8.c8.c8 {
  -webkit-transition-property: width;
  transition-property: width;
  -webkit-transition-duration: 900ms;
  transition-duration: 900ms;
  -webkit-transition-timing-function: cubic-bezier(0.5,0,0,1);
  transition-timing-function: cubic-bezier(0.5,0,0,1);
}

.c7.c7.c7.c7.c7 {
  background-color: hsla(25,90%,48%,1);
  height: 100%;
  width: 20%;
}

.c9.c9.c9.c9.c9 {
  height: 100%;
  width: 100%;
  opacity: 0;
  background-color: white;
  -webkit-animation: iUKfkR-450290765 900ms cubic-bezier(0.5,0,0,1) infinite;
  animation: iUKfkR-450290765 900ms cubic-bezier(0.5,0,0,1) infinite;
  -webkit-animation-delay: 3000ms;
  animation-delay: 3000ms;
}

.c3.c3.c3.c3.c3 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter",-apple-system,BlinkMacSystemFont,San Francisco,Segoe UI,Roboto,Helvetica Neue,sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class=""
    data-blade-component="progress-bar"
  >
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <div
          class="c2"
          data-blade-component="base-box"
        >
          <p
            class="c3"
            data-blade-component="text"
          >
            20%
          </p>
        </div>
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class=""
        data-blade-component="base-box"
        id="progress-20"
        role="progressbar"
      >
        <div
          class="c4"
          data-blade-component="base-box"
        >
          <div
            class="c5 c6 c7"
            data-blade-component="base-box"
          >
            <div
              class=" c8 c9"
              data-blade-component="base-box"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProgressBar /> should render color=positive ProgressBar 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c2.c2.c2.c2.c2 {
  margin-bottom: 4px;
}

.c4.c4.c4.c4.c4 {
  overflow: hidden;
  position: relative;
  height: 2px;
  background-color: hsla(211,20%,52%,0.09);
}

.c5.c5.c5.c5.c5 {
  background-color: hsla(150,100%,32%,1);
}

.c6.c6.c6.c6.c6 {
  -webkit-transition-property: width;
  transition-property: width;
  -webkit-transition-duration: 900ms;
  transition-duration: 900ms;
}

.c8.c8.c8.c8.c8 {
  -webkit-transition-property: width;
  transition-property: width;
  -webkit-transition-duration: 900ms;
  transition-duration: 900ms;
  -webkit-transition-timing-function: cubic-bezier(0.5,0,0,1);
  transition-timing-function: cubic-bezier(0.5,0,0,1);
}

.c7.c7.c7.c7.c7 {
  background-color: hsla(150,100%,32%,1);
  height: 100%;
  width: 20%;
}

.c9.c9.c9.c9.c9 {
  height: 100%;
  width: 100%;
  opacity: 0;
  background-color: white;
  -webkit-animation: iUKfkR-450290765 900ms cubic-bezier(0.5,0,0,1) infinite;
  animation: iUKfkR-450290765 900ms cubic-bezier(0.5,0,0,1) infinite;
  -webkit-animation-delay: 3000ms;
  animation-delay: 3000ms;
}

.c3.c3.c3.c3.c3 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter",-apple-system,BlinkMacSystemFont,San Francisco,Segoe UI,Roboto,Helvetica Neue,sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class=""
    data-blade-component="progress-bar"
  >
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <div
          class="c2"
          data-blade-component="base-box"
        >
          <p
            class="c3"
            data-blade-component="text"
          >
            20%
          </p>
        </div>
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class=""
        data-blade-component="base-box"
        id="progress-22"
        role="progressbar"
      >
        <div
          class="c4"
          data-blade-component="base-box"
        >
          <div
            class="c5 c6 c7"
            data-blade-component="base-box"
          >
            <div
              class=" c8 c9"
              data-blade-component="base-box"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProgressBar /> should render medium size ProgressBar 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3.c3.c3.c3.c3 {
  margin-bottom: 4px;
}

.c4.c4.c4.c4.c4 {
  overflow: hidden;
  position: relative;
  height: 4px;
  background-color: hsla(211,20%,52%,0.09);
}

.c5.c5.c5.c5.c5 {
  background-color: hsla(227,100%,59%,1);
}

.c6.c6.c6.c6.c6 {
  -webkit-transition-property: width;
  transition-property: width;
  -webkit-transition-duration: 900ms;
  transition-duration: 900ms;
}

.c8.c8.c8.c8.c8 {
  -webkit-transition-property: width;
  transition-property: width;
  -webkit-transition-duration: 900ms;
  transition-duration: 900ms;
  -webkit-transition-timing-function: cubic-bezier(0.5,0,0,1);
  transition-timing-function: cubic-bezier(0.5,0,0,1);
}

.c7.c7.c7.c7.c7 {
  background-color: hsla(227,100%,59%,1);
  height: 100%;
  width: 20%;
}

.c9.c9.c9.c9.c9 {
  height: 100%;
  width: 100%;
  opacity: 0;
  background-color: white;
  -webkit-animation: iUKfkR-450290765 900ms cubic-bezier(0.5,0,0,1) infinite;
  animation: iUKfkR-450290765 900ms cubic-bezier(0.5,0,0,1) infinite;
  -webkit-animation-delay: 3000ms;
  animation-delay: 3000ms;
}

.c2.c2.c2.c2.c2 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter",-apple-system,BlinkMacSystemFont,San Francisco,Segoe UI,Roboto,Helvetica Neue,sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class=""
    data-blade-component="progress-bar"
  >
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <label
          class="c2"
          data-blade-component="text"
        >
          Label
        </label>
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <p
            class="c2"
            data-blade-component="text"
          >
            20%
          </p>
        </div>
      </div>
      <div
        aria-label="Label"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class=""
        data-blade-component="base-box"
        id="progress-8"
        role="progressbar"
      >
        <div
          class="c4"
          data-blade-component="base-box"
        >
          <div
            class="c5 c6 c7"
            data-blade-component="base-box"
          >
            <div
              class=" c8 c9"
              data-blade-component="base-box"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProgressBar /> should render meter variant of ProgressBar  1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c2.c2.c2.c2.c2 {
  overflow: hidden;
  position: relative;
  height: 2px;
  background-color: hsla(211,20%,52%,0.09);
}

.c3.c3.c3.c3.c3 {
  background-color: hsla(227,100%,59%,1);
}

.c4.c4.c4.c4.c4 {
  -webkit-transition-property: width;
  transition-property: width;
  -webkit-transition-duration: 900ms;
  transition-duration: 900ms;
}

.c6.c6.c6.c6.c6 {
  -webkit-transition-property: width;
  transition-property: width;
  -webkit-transition-duration: 900ms;
  transition-duration: 900ms;
  -webkit-transition-timing-function: cubic-bezier(0.5,0,0,1);
  transition-timing-function: cubic-bezier(0.5,0,0,1);
}

.c5.c5.c5.c5.c5 {
  background-color: hsla(227,100%,59%,1);
  height: 100%;
  width: 70%;
}

<div>
  <div
    class=""
    data-blade-component="progress-bar"
  >
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      />
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="70"
        aria-valuetext="70"
        class=""
        data-blade-component="base-box"
        id="meter-12"
        role="meter"
      >
        <div
          class="c2"
          data-blade-component="base-box"
        >
          <div
            class="c3 c4 c5"
            data-blade-component="base-box"
          >
            <div
              class=" c6"
              data-blade-component="base-box"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProgressBar /> should render small size ProgressBar 1`] = `
.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3.c3.c3.c3.c3 {
  margin-bottom: 4px;
}

.c4.c4.c4.c4.c4 {
  overflow: hidden;
  position: relative;
  height: 2px;
  background-color: hsla(211,20%,52%,0.09);
}

.c5.c5.c5.c5.c5 {
  background-color: hsla(227,100%,59%,1);
}

.c6.c6.c6.c6.c6 {
  -webkit-transition-property: width;
  transition-property: width;
  -webkit-transition-duration: 900ms;
  transition-duration: 900ms;
}

.c8.c8.c8.c8.c8 {
  -webkit-transition-property: width;
  transition-property: width;
  -webkit-transition-duration: 900ms;
  transition-duration: 900ms;
  -webkit-transition-timing-function: cubic-bezier(0.5,0,0,1);
  transition-timing-function: cubic-bezier(0.5,0,0,1);
}

.c7.c7.c7.c7.c7 {
  background-color: hsla(227,100%,59%,1);
  height: 100%;
  width: 20%;
}

.c9.c9.c9.c9.c9 {
  height: 100%;
  width: 100%;
  opacity: 0;
  background-color: white;
  -webkit-animation: iUKfkR-450290765 900ms cubic-bezier(0.5,0,0,1) infinite;
  animation: iUKfkR-450290765 900ms cubic-bezier(0.5,0,0,1) infinite;
  -webkit-animation-delay: 3000ms;
  animation-delay: 3000ms;
}

.c2.c2.c2.c2.c2 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter",-apple-system,BlinkMacSystemFont,San Francisco,Segoe UI,Roboto,Helvetica Neue,sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class=""
    data-blade-component="progress-bar"
  >
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <div
        class="c1"
        data-blade-component="base-box"
      >
        <label
          class="c2"
          data-blade-component="text"
        >
          Label
        </label>
        <div
          class="c3"
          data-blade-component="base-box"
        >
          <p
            class="c2"
            data-blade-component="text"
          >
            20%
          </p>
        </div>
      </div>
      <div
        aria-label="Label"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class=""
        data-blade-component="base-box"
        id="progress-6"
        role="progressbar"
      >
        <div
          class="c4"
          data-blade-component="base-box"
        >
          <div
            class="c5 c6 c7"
            data-blade-component="base-box"
          >
            <div
              class=" c8 c9"
              data-blade-component="base-box"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProgressBar /> should update the progress value appropriately 1`] = `
.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c7.c7.c7.c7.c7 {
  margin-bottom: 4px;
}

.c8.c8.c8.c8.c8 {
  overflow: hidden;
  position: relative;
  height: 2px;
  background-color: hsla(211,20%,52%,0.09);
}

.c9.c9.c9.c9.c9 {
  background-color: hsla(227,100%,59%,1);
}

.c10.c10.c10.c10.c10 {
  -webkit-transition-property: width;
  transition-property: width;
  -webkit-transition-duration: 900ms;
  transition-duration: 900ms;
}

.c12.c12.c12.c12.c12 {
  -webkit-transition-property: width;
  transition-property: width;
  -webkit-transition-duration: 900ms;
  transition-duration: 900ms;
  -webkit-transition-timing-function: cubic-bezier(0.5,0,0,1);
  transition-timing-function: cubic-bezier(0.5,0,0,1);
}

.c11.c11.c11.c11.c11 {
  background-color: hsla(227,100%,59%,1);
  height: 100%;
  width: 0%;
}

.c13.c13.c13.c13.c13 {
  height: 100%;
  width: 100%;
  opacity: 0;
  background-color: white;
  -webkit-animation: iUKfkR-450290765 900ms cubic-bezier(0.5,0,0,1) infinite;
  animation: iUKfkR-450290765 900ms cubic-bezier(0.5,0,0,1) infinite;
  -webkit-animation-delay: 3000ms;
  animation-delay: 3000ms;
}

.c3.c3.c3.c3.c3 {
  color: hsla(0,0%,100%,1);
  font-family: "Inter",-apple-system,BlinkMacSystemFont,San Francisco,Segoe UI,Roboto,Helvetica Neue,sans-serif;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c6.c6.c6.c6.c6 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter",-apple-system,BlinkMacSystemFont,San Francisco,Segoe UI,Roboto,Helvetica Neue,sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  min-height: 36px;
  width: auto;
  cursor: pointer;
  background-color: hsla(227,100%,59%,1);
  border-color: hsla(227,100%,59%,1);
  border-width: 0px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 20px;
  padding-right: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  position: relative;
}

.c0.c0.c0.c0.c0:hover {
  background-color: hsla(227,71%,51%,1);
  border-color: hsla(227,100%,59%,1);
}

.c0.c0.c0.c0.c0:active {
  background-color: hsla(227,71%,51%,1);
  border-color: hsla(227,100%,59%,1);
}

.c0.c0.c0.c0.c0:focus-visible {
  background-color: hsla(227,71%,51%,1);
  border-color: hsla(227,100%,59%,1);
  outline: 1px solid hsla(227,100%,59%,0.09);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
}

.c0.c0.c0.c0.c0 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c2.c2.c2.c2.c2 {
  opacity: 1;
}

<div>
  <button
    class="c0"
    data-blade-component="button"
    role="button"
    type="button"
  >
    <div
      class="c1 c2"
      data-blade-component="base-box"
    >
      <div
        class="c3"
        data-blade-component="base-text"
      >
        Update Progress
      </div>
    </div>
  </button>
  <div
    class=""
    data-blade-component="progress-bar"
  >
    <div
      class="c4"
      data-blade-component="base-box"
    >
      <div
        class="c5"
        data-blade-component="base-box"
      >
        <label
          class="c6"
          data-blade-component="text"
        >
          Label
        </label>
        <div
          class="c7"
          data-blade-component="base-box"
        >
          <p
            class="c6"
            data-blade-component="text"
          >
            0%
          </p>
        </div>
      </div>
      <div
        aria-label="Label"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        aria-valuetext="0%"
        class=""
        data-blade-component="base-box"
        id="progress-3"
        role="progressbar"
      >
        <div
          class="c8"
          data-blade-component="base-box"
        >
          <div
            class="c9 c10 c11"
            data-blade-component="base-box"
          >
            <div
              class=" c12 c13"
              data-blade-component="base-box"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProgressBar /> should update the progress value appropriately 2`] = `
.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c4.c4.c4.c4.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c5.c5.c5.c5.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c7.c7.c7.c7.c7 {
  margin-bottom: 4px;
}

.c8.c8.c8.c8.c8 {
  overflow: hidden;
  position: relative;
  height: 2px;
  background-color: hsla(211,20%,52%,0.09);
}

.c9.c9.c9.c9.c9 {
  background-color: hsla(227,100%,59%,1);
}

.c10.c10.c10.c10.c10 {
  -webkit-transition-property: width;
  transition-property: width;
  -webkit-transition-duration: 900ms;
  transition-duration: 900ms;
}

.c12.c12.c12.c12.c12 {
  -webkit-transition-property: width;
  transition-property: width;
  -webkit-transition-duration: 900ms;
  transition-duration: 900ms;
  -webkit-transition-timing-function: cubic-bezier(0.5,0,0,1);
  transition-timing-function: cubic-bezier(0.5,0,0,1);
}

.c11.c11.c11.c11.c11 {
  background-color: hsla(227,100%,59%,1);
  height: 100%;
  width: 0%;
}

.c13.c13.c13.c13.c13 {
  height: 100%;
  width: 100%;
  opacity: 0;
  background-color: white;
  -webkit-animation: iUKfkR-450290765 900ms cubic-bezier(0.5,0,0,1) infinite;
  animation: iUKfkR-450290765 900ms cubic-bezier(0.5,0,0,1) infinite;
  -webkit-animation-delay: 3000ms;
  animation-delay: 3000ms;
}

.c3.c3.c3.c3.c3 {
  color: hsla(0,0%,100%,1);
  font-family: "Inter",-apple-system,BlinkMacSystemFont,San Francisco,Segoe UI,Roboto,Helvetica Neue,sans-serif;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c6.c6.c6.c6.c6 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter",-apple-system,BlinkMacSystemFont,San Francisco,Segoe UI,Roboto,Helvetica Neue,sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  min-height: 36px;
  width: auto;
  cursor: pointer;
  background-color: hsla(227,100%,59%,1);
  border-color: hsla(227,100%,59%,1);
  border-width: 0px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 20px;
  padding-right: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  position: relative;
}

.c0.c0.c0.c0.c0:hover {
  background-color: hsla(227,71%,51%,1);
  border-color: hsla(227,100%,59%,1);
}

.c0.c0.c0.c0.c0:active {
  background-color: hsla(227,71%,51%,1);
  border-color: hsla(227,100%,59%,1);
}

.c0.c0.c0.c0.c0:focus-visible {
  background-color: hsla(227,71%,51%,1);
  border-color: hsla(227,100%,59%,1);
  outline: 1px solid hsla(227,100%,59%,0.09);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
}

.c0.c0.c0.c0.c0 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c2.c2.c2.c2.c2 {
  opacity: 1;
}

<div>
  <button
    class="c0"
    data-blade-component="button"
    role="button"
    type="button"
  >
    <div
      class="c1 c2"
      data-blade-component="base-box"
    >
      <div
        class="c3"
        data-blade-component="base-text"
      >
        Update Progress
      </div>
    </div>
  </button>
  <div
    class=""
    data-blade-component="progress-bar"
  >
    <div
      class="c4"
      data-blade-component="base-box"
    >
      <div
        class="c5"
        data-blade-component="base-box"
      >
        <label
          class="c6"
          data-blade-component="text"
        >
          Label
        </label>
        <div
          class="c7"
          data-blade-component="base-box"
        >
          <p
            class="c6"
            data-blade-component="text"
          >
            0%
          </p>
        </div>
      </div>
      <div
        aria-label="Label"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        aria-valuetext="0%"
        class=""
        data-blade-component="base-box"
        id="progress-3"
        role="progressbar"
      >
        <div
          class="c8"
          data-blade-component="base-box"
        >
          <div
            class="c9 c10 c11"
            data-blade-component="base-box"
          >
            <div
              class=" c12 c13"
              data-blade-component="base-box"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
